--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
     "framer-motion": "^7.6.12",
+    "jsonwebtoken": "^8.5.1",
     "lottie-react": "^2.3.1",
     "next": "13.0.5",
     "nexus": "^1.3.0",
@@ -35,6 +36,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/styled-components": "^5.1.26",
     "@types/uuid": "^8.3.4"
   }
