--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
+    "formik": "^2.2.9",
     "framer-motion": "^7.6.12",
     "jsonwebtoken": "^8.5.1",
     "lottie-react": "^2.3.1",
