--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "eslint-config-next": "13.0.5",
     "formik": "^2.2.9",
     "framer-motion": "^7.6.12",
+    "i18next": "^22.4.9",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.1.1",
     "jsonwebtoken": "^8.5.1",
     "lottie-react": "^2.3.1",
     "next": "13.0.5",
@@ -29,6 +32,7 @@
     "react": "18.2.0",
     "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^12.1.5",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
     "styled-components": "^5.3.6",
