--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@types/react-dom": "18.0.9",
     "antd": "^5.0.2",
     "babel-plugin-styled-components": "^2.0.7",
-    "eslint": "8.28.0",
+    "bcrypt": "^5.1.0",
     "eslint-config-next": "13.0.5",
     "formik": "^2.2.9",
     "framer-motion": "^7.6.12",
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^8.5.1",
     "lottie-react": "^2.3.1",
     "next": "13.0.5",
+    "next-auth": "^4.19.2",
     "nexus": "^1.3.0",
     "prisma": "^4.6.1",
     "react": "18.2.0",
@@ -43,6 +44,8 @@
   "devDependencies": {
     "@types/jsonwebtoken": "^8.5.9",
     "@types/styled-components": "^5.1.26",
-    "@types/uuid": "^8.3.4"
+    "@types/uuid": "^8.3.4",
+    "eslint": "^8.35.0",
+    "nodemon": "^2.0.20"
   }
 }
